force-app/main/default/objects/Account/fields/Activation_Key__c.field-meta.xml
<CustomField>
    <fullName>Activation_Key__c</fullName>
    <label>Activation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>