force-app/main/default/objects/Account/fields/Arms__c.field-meta.xml
<CustomField>
    <fullName>Arms__c</fullName>
    <label>Arms (Inches)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>