force-app/main/default/objects/Account/fields/ChatGPT_A_Social_Security_Number_SSN__c.field-meta.xml
<CustomField>
    <fullName>ChatGPT_A_Social_Security_Number_SSN__c</fullName>
    <label>ChatGPT A Social Security Number (SSN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>