force-app/main/default/objects/Account/fields/Chest__c.field-meta.xml
<CustomField>
    <fullName>Chest__c</fullName>
    <label>Chest (Inches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>