force-app/main/default/objects/Account/fields/Fat__c.field-meta.xml
<CustomField>
    <fullName>Fat__c</fullName>
    <label>Fat (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>