force-app/main/default/objects/Account/fields/First_BMI__c.field-meta.xml
<CustomField>
    <fullName>First_BMI__c</fullName>
    <label>First BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>