force-app/main/default/objects/Account/fields/Interested_Area__c.field-meta.xml
<CustomField>
    <fullName>Interested_Area__c</fullName>
    <label>Interested Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>