force-app/main/default/objects/Account/fields/isBirthday__c.field-meta.xml
<CustomField>
    <fullName>isBirthday__c</fullName>
    <formula>AND

   ( DAY( PersonContact.Birthdate )= DAY(  TODAY()  )      , 

      MONTH( PersonContact.Birthdate ) =  MONTH( TODAY() )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isBirthday?</label>
    <type>Checkbox</type>
</CustomField>