force-app/main/default/objects/Account/fields/isDeactive__c.field-meta.xml
<CustomField>
    <fullName>isDeactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeactive?</label>
    <type>Checkbox</type>
</CustomField>