force-app/main/default/objects/Account/fields/Last_BMI_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_BMI_Calculated_Date__c</fullName>
    <label>Last BMI Calculated Date</label>
    <type>Date</type>
</CustomField>