force-app/main/default/objects/Account/fields/Membership_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Membership_Valid_From__c</fullName>
    <label>Membership Valid From</label>
    <type>Date</type>
</CustomField>