force-app/main/default/objects/Account/fields/Membership_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Membership_Valid_To__c</fullName>
    <label>Membership Valid To</label>
    <type>Date</type>
</CustomField>