force-app/main/default/objects/Account/fields/Recent_BMI__c.field-meta.xml
<CustomField>
    <fullName>Recent_BMI__c</fullName>
    <label>Recent BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>