force-app/main/default/objects/Account/fields/Thigh__c.field-meta.xml
<CustomField>
    <fullName>Thigh__c</fullName>
    <label>Thigh (Inches)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>