force-app/main/default/objects/Account/fields/Waist__c.field-meta.xml
<CustomField>
    <fullName>Waist__c</fullName>
    <label>Waist (Inches)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>