force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>isBirthday__c</columns>
    <columns>RecordTypeName__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>